--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mapjl",
+  "name": "csvmap",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,24 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "leaflet": "^1.9.4",
-    "maplibre-gl": "^4.1.3",
-    "next": "14.2.1",
+    "next": "14.2.2",
     "papaparse": "^5.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
-    "react-map-gl": "^7.1.7"
+    "react": "^18",
+    "react-dom": "^18",
+    "wellknown": "^0.5.0"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.11",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "encoding": "^0.1.13",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.1",
+    "@types/wellknown": "^0.5.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
