--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mapbox-gl": "^3.1.0",
+    "mapbox-gl": "^3.3.0",
     "next": "14.2.2",
     "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-map-gl": "^7.1.7",
     "wellknown": "^0.5.0"
   },
   "devDependencies": {
